[gd_scene load_steps=6 format=3 uid="uid://cdbmix7gq0ohd"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_qf5hh"]
[ext_resource type="PackedScene" uid="uid://dc8phjp33tcab" path="res://scenes/enemy_body.tscn" id="2_2fqoj"]
[ext_resource type="Texture2D" uid="uid://doldcydrsqcpf" path="res://assets/snakes/default/face.png" id="3_5g12m"]
[ext_resource type="Theme" uid="uid://bvx2xumgym1bg" path="res://assets/username.tres" id="4_ah28x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_je5be"]
size = Vector2(62, 62)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_qf5hh")

[node name="Body" type="Node2D" parent="."]

[node name="EnemyBody1" parent="Body" instance=ExtResource("2_2fqoj")]
position = Vector2(-64, 0)

[node name="EnemyBody2" parent="Body" instance=ExtResource("2_2fqoj")]
position = Vector2(-128, 0)

[node name="EnemyFace" type="Area2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="EnemyFace"]
texture = ExtResource("3_5g12m")

[node name="Hitbox" type="CollisionShape2D" parent="EnemyFace"]
shape = SubResource("RectangleShape2D_je5be")

[node name="Name" type="Label" parent="EnemyFace"]
offset_left = -88.0
offset_top = -57.0
offset_right = 88.0
offset_bottom = -32.0
theme = ExtResource("4_ah28x")
text = "Hello World"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="area_entered" from="EnemyFace" to="." method="_on_enemy_face_area_entered"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
